# xenor-xenus

./: .gitignore  Cargo.toml  README.md  gameplay.md  main-concept.html
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: BuildingPalette.tsx  GameGrid.tsx  PhaseIndicator.tsx  ResourceBar.tsx  SeedInput.tsx
frontend/src/hooks/: useGameLoop.ts  useWasm.ts
frontend/src/styles/: App.css  BuildingPalette.css  GameGrid.css  PhaseIndicator.css  ResourceBar.css  SeedInput.css  theme.css
frontend/src/types/: game.ts  wasm.ts
frontend/src/wasm/: init.ts  package.json  xenor_xenus.d.ts  xenor_xenus.js  xenor_xenus_bg.js  xenor_xenus_bg.wasm  xenor_xenus_bg.wasm.d.ts
src/: building.rs  lib.rs  phases.rs  seed.rs  state.rs  wasm_bridge.rs
